# llm-mem

./: .gitignore  Cargo.toml  Dockerfile.ci-test  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  nightly-eval.yml  release.yml
benches/: layer_bench.rs
examples/: config.llama-server.toml  config.openrouter.toml  config.toml
scripts/: test-ci-local.sh
src/: config.rs  consistency.rs  document_session.rs  error.rs  lance_store.rs  lib.rs  mcp.rs  memory_bank.rs  operations.rs  types.rs  vector_store.rs
src/layer/: abstraction_pipeline.rs  mod.rs  navigation.rs  prompts.rs  tests.rs
src/llm/: circuit_breaker.rs  client.rs  extractor_types.rs  lazy_client.rs  local_client.rs  mod.rs  model_downloader.rs
src/memory/: abstraction_service.rs  cache_service.rs  classification.rs  deduplication.rs  extractor.rs  importance.rs  ingestion_service.rs  manager.rs  metrics.rs  mod.rs  prompts.rs  search_service.rs  updater.rs  utils.rs
src/search/: graph_engine.rs  mod.rs  pyramid_assembler.rs
src/types/: content_schema.rs  layer.rs
tests/: e2e_real_models.rs  evaluation.rs  integration_tests.rs  lancedb_integration.rs  pyramid_integration.rs  run-all-tests.sh
