[package]
name = "llm-mem"
version = "0.1.0"
edition = "2024"
description = "Standalone MCP memory server with embedded vector store for AI agents"
license = "MIT"

[lib]
name = "llm_mem"
path = "src/lib.rs"

[[bin]]
name = "llm-mem-mcp"
path = "src/bin/mcp.rs"

[[bin]]
name = "llm-mem-inspect"
path = "src/bin/inspect.rs"

[[bin]]
name = "llm-mem"
path = "src/bin/llm-mem-cli/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP client (always available for API backends)
reqwest = { version = "0.12", features = ["json"] }

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# LLM framework
rig-core = "0.23"

# MCP server
rmcp = { version = "0.10", features = ["server", "transport-io", "client", "transport-child-process"] }

# CLI
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
rustyline = { version = "11.0", features = ["derive", "custom-bindings"] }

# TUI
crossterm = "0.27"
ratatui = "0.30"
unicode-width = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"

# Hashing
sha2 = "0.10"

# Async trait + cloneable trait objects
async-trait = "0.1"
dyn-clone = "1.0"

# JSON Schema for rig extractors
schemars = { version = "1.0", features = ["derive"] }

# Regex
regex = "1.10"

# Local inference (optional, default-enabled)
llama-cpp-2 = { version = "0.1.137", optional = true }
llama-cpp-sys-2 = { version = "0.1.137", optional = true }
fastembed = { version = "4", optional = true }
tokio-stream = { version = "0.1", optional = true }
rolling-file = "0.2.0"
futures = "0.3.32"
rand = "0.10.0"
text-splitter = { version = "0.29.3", features = ["markdown"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
dashmap = "6.1.0"
md5 = "0.8.0"

# Vector store
lancedb = "0.27.2"
arrow-array = "57"
arrow-schema = "57"
vectorlite = { version = "0.1.5", optional = true }

[dev-dependencies]
tempfile = "3.20"

[features]
default = ["local", "metal", "lancedb"]
lancedb = []
vector-lite = ["dep:vectorlite"]
local = ["dep:llama-cpp-2", "dep:llama-cpp-sys-2", "dep:fastembed", "dep:tokio-stream"]
metal = ["llama-cpp-2/metal", "llama-cpp-sys-2/metal"]
vulkan = ["llama-cpp-2/vulkan", "llama-cpp-sys-2/vulkan"]
e2e = []
